--- a/projecthtml.css
+++ b/projecthtml.css
@@ -191,7 +191,7 @@ body {
         display: block;    
         cursor: pointer;
         font-size: 1.5em;  
-        color: #272725;
+        color: #d8d8bf;
         position: absolute; 
         top: 20px;
         right: 20px;
