--- a/projecthtml.css
+++ b/projecthtml.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    background: #c7c1b4;
+    background: #ff7b00;
     color: #ffffff; 
   }
   
